fix: resolved bug in overflow in layout dashboard

--- a/frontend/src/components/common/Dashboard/Order/styles.css
+++ b/frontend/src/components/common/Dashboard/Order/styles.css
@@ -13,6 +13,7 @@
 
 .order-wrapper .order-wrapper-content-scroll {
   width: 100%;
+  max-height: 54rem;
   height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -137,4 +138,16 @@
   font-size: 1.2rem;
   margin-left: 1rem;
   color: rgb(84, 84, 84);
+}
+
+/*Media query*/
+@media only screen and (max-width:992px) { 
+   
+  .order-wrapper .order-wrapper-content-scroll {
+    max-height: 50rem;
+  }
+
+  .order-wrapper .order-title {
+    margin-top: 2rem;
+  }
 }
