--- a/frontend/src/components/common/Dashboard/styles.css
+++ b/frontend/src/components/common/Dashboard/styles.css
@@ -1,18 +1,20 @@
 .dashboard-main {
+  position: relative;
+  width: 100%;
   margin-top: 14.4rem;
 }
 
 .wrapper-dashboard {
   width: 100%;
   height: 58.6rem;
-  padding-right: 1rem;
-
+  
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
 .wrapper-dashboard-content {
+  position: relative;
   width: 100%;
   height: 58.6rem;
   background-color: #ffff;
@@ -20,9 +22,9 @@
 }
 
 .icon-hamburger-sidebar:before {
-  position: relative;
-  left: 2.5rem;
-  top: 1.6rem;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
   font-family: "Font Awesome 5 Free";
   cursor: pointer;
   content: '\f0c9';
@@ -43,5 +45,11 @@
   .icon-hamburger-sidebar:before {
     display: block;
   }
+}
 
+@media only screen and (max-width:779px) { 
+
+  .dashboard-main {
+    margin-top: 20rem;
+  }
 }
